--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,1 @@
-
-{
-  "name": "Ordresan",
-  "short_name": "Ordresan",
-  "start_url": "./index.html",
-  "display": "standalone",
-  "background_color": "#F5F1EA",
-  "theme_color": "#2563eb",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
+{'name': 'Ordresan', 'short_name': 'Ordresan', 'start_url': '.', 'display': 'standalone', 'background_color': '#F5F1EA', 'theme_color': '#F5F1EA', 'icons': [{'src': 'icon-192.png', 'sizes': '192x192', 'type': 'image/png'}, {'src': 'icon-512.png', 'sizes': '512x512', 'type': 'image/png'}]}
